<resources>
    <string name="app_name">Basic Calculator</string>
    <string name="_0">0</string>
    <string name="calcTextHint">0</string>
    <string name="plusSign">+</string>
    <string name="clear">CLEAR</string>
    <string name="multiplySign">x</string>
    <string name="minusSign">-</string>
    <string name="forwardSlash">/</string>
    <string name="dot">.</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="equalSign">=</string>
</resources>