<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fadedPinkGray">

    <Button
        android:id="@+id/equalButton"
        android:layout_width="83dp"
        android:layout_height="64dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/indigoDark"
        android:fontFamily="sans-serif-black"
        android:text="@string/equalSign"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/dotButton"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button0"
        android:layout_width="176dp"
        android:layout_height="64dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/indigoDark"
        android:fontFamily="sans-serif-black"
        android:text="@string/_0"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="83dp"
        android:layout_height="64dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/indigoDark"
        android:fontFamily="sans-serif-black"
        android:text="@string/_3"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/divideButton"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button2"
        android:layout_width="83dp"
        android:layout_height="64dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/indigoDark"
        android:fontFamily="sans-serif-black"
        android:text="@string/_2"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button1"
        android:layout_width="83dp"
        android:layout_height="64dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/indigoDark"
        android:fontFamily="sans-serif-black"
        android:text="@string/_1"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button6"
        android:layout_width="83dp"
        android:layout_height="64dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/indigoDark"
        android:fontFamily="sans-serif-black"
        android:text="@string/_6"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/multiplyButton"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/button5"
        android:layout_width="83dp"
        android:layout_height="64dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/indigoDark"
        android:fontFamily="sans-serif-black"
        android:text="@string/_5"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button4"
        android:layout_width="83dp"
        android:layout_height="64dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/indigoDark"
        android:fontFamily="sans-serif-black"
        android:text="@string/_4"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />



    <Button
        android:id="@+id/button9"
        android:layout_width="83dp"
        android:layout_height="64dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/indigoDark"
        android:fontFamily="sans-serif-black"
        android:text="@string/_9"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/subtractButton"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/clearButton" />

    <Button
        android:id="@+id/button8"
        android:layout_width="83dp"
        android:layout_height="64dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/indigoDark"
        android:fontFamily="sans-serif-black"
        android:text="@string/_8"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/clearButton" />

    <Button
        android:id="@+id/dotButton"
        android:layout_width="73dp"
        android:layout_height="64dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/indigoDark"
        android:fontFamily="sans-serif-black"
        android:text="@string/dot"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/clearButton"
        app:layout_constraintTop_toBottomOf="@+id/divideButton" />

    <Button
        android:id="@+id/divideButton"
        android:layout_width="73dp"
        android:layout_height="64dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/indigoDark"
        android:fontFamily="sans-serif-black"
        android:text="@string/forwardSlash"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/clearButton"
        app:layout_constraintTop_toBottomOf="@+id/multiplyButton" />

    <Button
        android:id="@+id/multiplyButton"
        android:layout_width="73dp"
        android:layout_height="64dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/indigoDark"
        android:fontFamily="sans-serif-black"
        android:text="@string/multiplySign"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/clearButton"
        app:layout_constraintTop_toBottomOf="@+id/subtractButton" />

    <Button
        android:id="@+id/subtractButton"
        android:layout_width="73dp"
        android:layout_height="64dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/indigoDark"
        android:fontFamily="sans-serif-black"
        android:text="@string/minusSign"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/clearButton"
        app:layout_constraintTop_toBottomOf="@+id/addButton" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="0"
        android:ems="10"
        android:hint="@string/calcTextHint"
        android:inputType="number|numberDecimal"
        android:text="@string/_0"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="270dp"
        android:layout_height="64dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/indigoDark"
        android:fontFamily="sans-serif-black"
        android:text="@string/clear"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="73dp"
        android:layout_height="64dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/indigoDark"
        android:text="@string/plusSign"
        android:textSize="30sp"
        android:fontFamily="sans-serif-black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/clearButton"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/button7"
        android:layout_width="83dp"
        android:layout_height="64dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/indigoDark"
        android:fontFamily="sans-serif-black"
        android:text="@string/_7"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clearButton" />

</androidx.constraintlayout.widget.ConstraintLayout>